--- a/index.html
+++ b/index.html
@@ -94,7 +94,10 @@
 
 </div>
 <div class="container third">
-    <h1>ONLINE COURSES</h1>
+    <div class="x">
+        <h1>ONLINE COURSES</h1>
+    </div>
+    
     <div class="card-deck">
         <div class="card">
           <img src="images/5.png" class="card-img-top" alt="...">
